--- a/src/scss/components/header/navBar.scss
+++ b/src/scss/components/header/navBar.scss
@@ -1,4 +1,4 @@
-.nav-menu2 {
+.nav-menu {
   position: fixed;
   right: -400px;
   transition: 0.3s;
@@ -18,16 +18,32 @@
     white-space: nowrap;
   }
 
-  // colapse
+  // colapse settings
   &__third-lvl,
   &__second-lvl,
   input[type="checkbox"] {
     display: none;
   }
 
-  &__main input:checked ~ .nav-menu2__second-lvl,
-  .nav-menu2__second-lvl input:checked ~ ul {
+  &__main input:checked ~ .nav-menu__second-lvl,
+  .nav-menu__second-lvl input:checked ~ ul {
     display: block;
+  }
+  @media (min-width: 1100px) {
+    & {
+      div:hover {
+        .nav-menu__second-lvl {
+          display: block;
+        }
+      }
+    }
+    &__second-lvl {
+      div:hover {
+        .nav-menu__third-lvl {
+          display: block;
+        }
+      }
+    }
   }
   // colapse end
 
@@ -49,11 +65,15 @@
       display: block;
       height: 43px;
       width: 100%;
+      padding-top: $base-unit;
+      padding-left: $space;
+      padding-right: $space * 2;
     }
 
     @media (min-width: 1100px) {
       display: inline-block;
-      a {
+      a,
+      label {
         padding: $base-unit;
       }
     }
@@ -62,23 +82,21 @@
   &__second-lvl {
     font-weight: $fw-normal;
     z-index: 999;
-
     text-transform: none;
     background-color: $color-2;
     a,
     label {
       padding-top: $base-unit;
-      padding-left: $space;
+      padding-left: $space * 1.5;
       padding-right: $space;
     }
 
     @media (min-width: 1100px) {
       position: absolute;
-      overflow: unset;
       top: $space * 1.2;
-      display: none;
       border: 3px solid $color-6;
-      a {
+      a,
+      label {
         padding: $base-unit $space;
       }
     }
@@ -103,8 +121,9 @@
     overflow: hidden;
     text-transform: none;
     background-color: $color-2;
-    a {
-      padding: $base-unit 0 0 $space * 3;
+    a,
+    label {
+      padding: $base-unit 0 0 $space * 2;
     }
 
     @media (min-width: 1100px) {
@@ -113,7 +132,8 @@
       left: 100%;
       top: -17px;
 
-      a {
+      a,
+      label {
         padding: $base-unit $space;
       }
     }
