--- a/src/scss/components/whiteSpace.scss
+++ b/src/scss/components/whiteSpace.scss
@@ -1,4 +1,5 @@
-.emptyPage {
-  width: 100%;
-  height: 2000px;
-}
+// .emptyPage {
+//   width: 100%;
+//   height: 2000px;
+//   color: white;
+// }
